# blue-framework

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: implant.rs  main.rs
migrations/: 20231031173253_Agent.sql
server/: Cargo.toml
server/migrations/: 20231031173253_Agent.sql  20231031200803_Request.sql
server/src/: handlers.rs  main.rs  model.rs  routes.rs
