[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.5", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
chrono = { version  = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
ureq = { version = "2.8", features = ["tls", "json"] }
log = "0.4"