[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
axum = "0.6"
tower-http = { version = "0.4.4", features = ["cors"] }
chrono = { version  = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
uuid = { version = "1.5", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}

